made some changes in z-index and fix found error about removing at 0s time left for harvesting

--- a/src/views/tile/tile.scss
+++ b/src/views/tile/tile.scss
@@ -1,5 +1,9 @@
 @import "../../global.scss";
 
+.popover {
+    z-index: 0;
+}
+
 .popover-body {
 
     button {
